--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <li><a href="#">New</a></li>
     <li><a href="#">Popular</a></li>
     <li><a href="#">Trending</a></li>
-    <li><a href="#">Categoriesn</a></li>
+    <li><a href="#">Categories</a></li>
     <div class="closeMenu"><i class="fa fa-times"></i></div>
   </ul>
 </nav>
