--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <!--section-->
   <section>
     <div id="sect">
-      <img src="C:\workspace\news-homepage-main\assets\images\image-web-3-desktop.jpg">
+      <img src="assets/images/image-web-3-desktop.jpg">
       <div class="desc">
       <h2> The Bright Future of Web 3.0?</h2>
       <div class="dive">
@@ -58,21 +58,21 @@
   </section>
   <section class="sio">
     <div class="img1">
-      <img src="C:\workspace\news-homepage-main\assets\images\image-retro-pcs.jpg" class="est">
+      <img src="assets/images/image-retro-pcs.jpg" class="est">
       <div class="ser">
       <h5>01</h5>
       <p class="ret">Reviving Retro PCs</p>
       <p class="res">What happens when old PCs are given modern upgrades?</p></div>
     </div>
     <div class="img1">
-      <img src="C:\workspace\news-homepage-main\assets\images\image-top-laptops.jpg" class="est">
+      <img src="assets/images/image-top-laptops.jpg" class="est">
       <div class="ser">
       <h5>02</h5>
       <p class="ret">Top 10 Laptops of 2022</p>
       <p class="res">Our best picks for various needs and budgets.</p></div>
     </div>
     <div class="img1">
-      <img src="C:\workspace\news-homepage-main\assets\images\image-gaming-growth.jpg" class="est">
+      <img src="assets/images/image-gaming-growth.jpg" class="est">
       <div class="ser">
       <h5>03</h5>
       <p class="ret">The Growth of Gaming</p>
